# dagflow

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  Makefile  README.md  config.json  docker-compose.override.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: build-containers.yml  deploy.yml  lint.yml  migrations-validate.yml  terraform-validate.yml  test.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/dagflow_api/: config.py  db.py  dependencies.py  main.py  repository.py  schemas.py
apps/api/src/dagflow_api/routers/: __init__.py  dashboard.py  failures.py  lineage.py  pipelines.py  queries.py  review.py  workflow.py
apps/api/tests/: test_dashboard.py  test_health.py  test_queries.py  test_workflow.py
apps/dagster/: Dockerfile  dagster.yaml  pyproject.toml  workspace.yaml
apps/dagster/src/dagflow_dagster/: __init__.py  asset_helpers.py  assets.py  config.py  dbt_topology.py  definitions.py  demo_data.py  execution.py  ingestion.py  resources.py  runner.py  schedules.py
apps/dagster/tests/: test_dbt_resource_config.py  test_definitions.py  test_ingestion.py  test_resources.py  test_runner.py  test_topology.py
apps/ui-react/: Dockerfile  index.html  package.json  tsconfig.json
apps/ui-react/src/: App.tsx  api.ts  styles.css
apps/ui-react/src/tabs/: DashboardTab.tsx  PipelineTab.tsx  ReviewTab.tsx
db/migrations/: 001_bootstrap_platform.sql  002_runtime_db_api.sql  003_demo_reset_api.sql  004_reset_cleans_prefixed_dbt_schemas.sql  005_restore_operational_export_tables.sql  006_sync_pipeline_run_status_with_review_state.sql  007_review_workbench_views.sql  008_fix_security_rollup_scope.sql  009_security_review_ticker_grain.sql  010_latest_run_reset_preserves_history.sql  011_validate_review_handoff.sql  012_review_breakdown_editable_holdings.sql  013_raw_lineage_join_indexes.sql  014_dimension_history_views.sql  015_security_metrics_from_holdings.sql  016_source_file_registry_and_elt_boundary.sql  017_review_data_issue_audit.sql  018_review_issue_pairing_for_ui.sql  019_review_workbench_perf.sql  020_operational_only_cleanup.sql  021_financially_valid_review_edits.sql  022_pipeline_step_runs.sql  023_export_bundle_registry.sql  024_preserve_holdings_calculation_state_on_security_cleanup.sql  025_security_outstanding_issue_edits.sql  026_holding_pct_precision.sql  027_fix_holding_pct_mart_backfill.sql  028_reapply_holding_pct_mart_precision.sql  029_dedupe_review_data_issue_pairs.sql  030_review_issue_current_rows_only.sql  031_aggregate_review_issue_rows.sql  032_recompute_security_estimates_on_outstanding_edits.sql  033_manual_corrections_only_in_bad_data_rows.sql  034_issue_categories_and_anomaly_checks.sql  035_fix_security_recalc_performance.sql  036_merge_pipelines.sql  037_fix_recalc_no_overwrite_factors.sql  038_fix_holding_recalc_no_overwrite_factors.sql  039_recalc_recompute_free_float.sql  040_fix_publish_snapshot_pipeline_code.sql  (+5 more)
db/seeds/: 001_registry_seed.sql  002_sample_poc_data.sql
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: dagflow_bigint_key.sql  dagflow_pipeline_run_id.sql  dagflow_row_hash.sql  log_dq_results.sql
dbt/models/: schema.yml  sources.yml
dbt/models/exports/security_master/: security_master_final.sql
dbt/models/exports/shareholder_holdings/: shareholder_holdings_final.sql
dbt/models/marts/security_master/: dim_security.sql
dbt/models/marts/shareholder_holdings/: dim_shareholder.sql  fact_shareholder_holding.sql
dbt/models/staging/security_master/: stg_sec_company_facts.sql  stg_sec_company_tickers.sql
dbt/models/staging/shareholder_holdings/: stg_13f_filers.sql  stg_13f_holdings.sql
dbt/snapshots/: dim_security_snapshot.sql  dim_shareholder_snapshot.sql
dbt/tests/: security_master_materiality_non_negative.sql  security_master_required_and_bounds.sql  security_master_share_consistency.sql  security_master_unique_per_run.sql  shareholder_holdings_required_and_bounds.sql  shareholder_holdings_weight_bounds.sql
docs/: architecture.md
infra/terraform/envs/dev/: main.tf  terraform.tfvars.example  variables.tf
ops/compose/pgbouncer/: Dockerfile  entrypoint.sh
ops/reports/: 2026_pipeline_monitor_report.json
ops/scripts/: backfill_history.py  generate_dag_topology.py  manage_db.py  run_2026_pipeline_monitor.py  sync_config.py  wait_for_postgres.sh
workflows/security_shareholder/: pyproject.toml
workflows/security_shareholder/dbt/models/: holdings.sql  holdings_export.sql  schema.yml  securities.sql  securities_export.sql  sources.yml
workflows/security_shareholder/src/dagflow_security_shareholder/: __init__.py  definitions.py  topology.py
workflows/security_shareholder/src/dagflow_security_shareholder/pipelines/security_master/: assets.py
(+27 files in other folders)
