[project]
name = "dagflow-dagster"
version = "0.1.0"
description = "Dagster orchestration package for Dagflow"
requires-python = ">=3.13"
dependencies = [
  "dagflow-pipeline-framework",
  "dagflow-source-adapters",
  "dagster>=1.10.10",
  "dagster-dbt>=0.26.10",
  "dagster-webserver>=1.13.0,<1.14.0",
  "dbt-postgres>=1.9.0",
  "psycopg[binary]>=3.2.9",
  "pydantic-settings>=2.9.1",
  "graphviz>=0.20",
]

[tool.uv.sources]
dagflow-pipeline-framework = { workspace = true }
dagflow-source-adapters = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dagflow_dagster"]
